new fc36 config.

--- a/configs/01-f36-a6037821c-kernel-x86_64-fedora.config
+++ b/configs/01-f36-a6037821c-kernel-x86_64-fedora.config
@@ -551,6 +551,7 @@ CONFIG_BLK_DEV_BSG=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_BLK_DEV_DRBD=m
 CONFIG_BLK_DEV_FD=m
+# CONFIG_BLK_DEV_FD_RAWCMD is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_BLK_DEV_INTEGRITY=y
 CONFIG_BLK_DEV_IO_TRACE=y
@@ -1727,6 +1728,7 @@ CONFIG_EEPROM_MAX6875=m
 # CONFIG_EFI_CAPSULE_QUIRK_QUARK_CSH is not set
 CONFIG_EFI_CUSTOM_SSDT_OVERLAYS=y
 # CONFIG_EFI_DISABLE_PCI_DMA is not set
+CONFIG_EFI_DXE_MEM_ATTRIBUTES=y
 # CONFIG_EFI_FAKE_MEMMAP is not set
 CONFIG_EFI_GENERIC_STUB_INITRD_CMDLINE_LOADER=y
 CONFIG_EFI_MIXED=y
