--- a/configs/01-fc36-bc7c58aaf-kernel-x86_64-fedora.config
+++ b/configs/01-fc36-bc7c58aaf-kernel-x86_64-fedora.config
@@ -486,7 +486,10 @@ CONFIG_BATMAN_ADV=m
 CONFIG_BATMAN_ADV_MCAST=y
 CONFIG_BATMAN_ADV_NC=y
 CONFIG_BATMAN_ADV_TRACING=y
-# CONFIG_BATTERY_BQ27XXX is not set
+# CONFIG_BATTERY_BQ27XXX_DT_UPDATES_NVM is not set
+# CONFIG_BATTERY_BQ27XXX_HDQ is not set
+CONFIG_BATTERY_BQ27XXX_I2C=m
+CONFIG_BATTERY_BQ27XXX=m
 CONFIG_BATTERY_CW2015=m
 # CONFIG_BATTERY_DS2760 is not set
 # CONFIG_BATTERY_DS2780 is not set
@@ -845,7 +848,7 @@ CONFIG_CHARGER_BQ24190=m
 # CONFIG_CHARGER_BQ24735 is not set
 CONFIG_CHARGER_BQ2515X=m
 CONFIG_CHARGER_BQ256XX=m
-# CONFIG_CHARGER_BQ25890 is not set
+CONFIG_CHARGER_BQ25890=m
 # CONFIG_CHARGER_BQ25980 is not set
 CONFIG_CHARGER_CROS_PCHG=m
 CONFIG_CHARGER_CROS_USBPD=m
@@ -1005,6 +1008,8 @@ CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_THERMAL=y
 CONFIG_CPU_FREQ=y
 # CONFIG_CPU_HOTPLUG_STATE_CONTROL is not set
+CONFIG_CPU_IBPB_ENTRY=y
+CONFIG_CPU_IBRS_ENTRY=y
 CONFIG_CPU_IDLE_GOV_HALTPOLL=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
 # CONFIG_CPU_IDLE_GOV_TEO is not set
@@ -1014,6 +1019,7 @@ CONFIG_CPU_LITTLE_ENDIAN=y
 CONFIG_CPUMASK_OFFSTACK=y
 CONFIG_CPUSETS=y
 # CONFIG_CPU_THERMAL is not set
+CONFIG_CPU_UNRET_ENTRY=y
 # CONFIG_CRAMFS is not set
 # CONFIG_CRAMFS_MTD is not set
 CONFIG_CRASH_DUMP=y
@@ -1408,7 +1414,7 @@ CONFIG_DM_UEVENT=y
 CONFIG_DM_UNSTRIPED=m
 CONFIG_DM_VERITY_FEC=y
 CONFIG_DM_VERITY=m
-# CONFIG_DM_VERITY_VERIFY_ROOTHASH_SIG_SECONDARY_KEYRING is not set
+CONFIG_DM_VERITY_VERIFY_ROOTHASH_SIG_SECONDARY_KEYRING=y
 CONFIG_DM_VERITY_VERIFY_ROOTHASH_SIG=y
 CONFIG_DM_WRITECACHE=m
 CONFIG_DM_ZERO=y
@@ -1758,6 +1764,7 @@ CONFIG_EEPROM_MAX6875=m
 # CONFIG_EFI_CAPSULE_QUIRK_QUARK_CSH is not set
 CONFIG_EFI_CUSTOM_SSDT_OVERLAYS=y
 # CONFIG_EFI_DISABLE_PCI_DMA is not set
+# CONFIG_EFI_DISABLE_RUNTIME is not set
 CONFIG_EFI_DXE_MEM_ATTRIBUTES=y
 # CONFIG_EFI_FAKE_MEMMAP is not set
 CONFIG_EFI_GENERIC_STUB_INITRD_CMDLINE_LOADER=y
@@ -1871,7 +1878,7 @@ CONFIG_FAT_KUNIT_TEST=m
 # CONFIG_FB_CARMINE is not set
 # CONFIG_FB_CIRRUS is not set
 # CONFIG_FB_CYBER2000 is not set
-# CONFIG_FB_EFI is not set
+CONFIG_FB_EFI=y
 # CONFIG_FB_FOREIGN_ENDIAN is not set
 # CONFIG_FB_GEODE is not set
 # CONFIG_FB_HGA is not set
@@ -1914,7 +1921,7 @@ CONFIG_FB_TILEBLITTING=y
 # CONFIG_FB_TRIDENT is not set
 # CONFIG_FB_UDL is not set
 # CONFIG_FB_UVESA is not set
-# CONFIG_FB_VESA is not set
+CONFIG_FB_VESA=y
 # CONFIG_FB_VGA16 is not set
 # CONFIG_FB_VIA is not set
 # CONFIG_FB_VIRTUAL is not set
@@ -2116,7 +2123,7 @@ CONFIG_GPIO_PCI_IDIO_16=m
 # CONFIG_GPIO_SIM is not set
 # CONFIG_GPIO_SYSCON is not set
 # CONFIG_GPIO_TPIC2810 is not set
-# CONFIG_GPIO_TPS68470 is not set
+CONFIG_GPIO_TPS68470=m
 # CONFIG_GPIO_TS4900 is not set
 # CONFIG_GPIO_VIPERBOARD is not set
 CONFIG_GPIO_VIRTIO=m
@@ -2746,7 +2753,7 @@ CONFIG_INTEL_SKL_INT3472=m
 CONFIG_INTEL_SMARTCONNECT=y
 CONFIG_INTEL_SOC_DTS_THERMAL=m
 CONFIG_INTEL_SOC_PMIC_BXTWC=m
-CONFIG_INTEL_SOC_PMIC_CHTDC_TI=m
+CONFIG_INTEL_SOC_PMIC_CHTDC_TI=y
 CONFIG_INTEL_SOC_PMIC_CHTWC=y
 CONFIG_INTEL_SOC_PMIC_MRFLD=m
 CONFIG_INTEL_SOC_PMIC=y
@@ -3539,9 +3546,9 @@ CONFIG_MFD_ENE_KB3930=m
 # CONFIG_MFD_GATEWORKS_GSC is not set
 # CONFIG_MFD_HI6421_PMIC is not set
 # CONFIG_MFD_HI6421_SPMI is not set
-CONFIG_MFD_INTEL_LPSS_ACPI=m
-CONFIG_MFD_INTEL_LPSS=m
-CONFIG_MFD_INTEL_LPSS_PCI=m
+CONFIG_MFD_INTEL_LPSS_ACPI=y
+CONFIG_MFD_INTEL_LPSS_PCI=y
+CONFIG_MFD_INTEL_LPSS=y
 CONFIG_MFD_INTEL_M10_BMC=m
 CONFIG_MFD_INTEL_PMC_BXT=m
 # CONFIG_MFD_INTEL_QUARK_I2C_GPIO is not set
@@ -3707,7 +3714,7 @@ CONFIG_MLX_WDT=m
 # CONFIG_MMA7455_I2C is not set
 # CONFIG_MMA7455_SPI is not set
 CONFIG_MMA7660=m
-# CONFIG_MMA8452 is not set
+CONFIG_MMA8452=m
 # CONFIG_MMA9551 is not set
 # CONFIG_MMA9553 is not set
 # CONFIG_MMC35240 is not set
@@ -5052,7 +5059,7 @@ CONFIG_R6040=m
 CONFIG_R8169=m
 CONFIG_R8188EU=m
 CONFIG_R8712U=m
-CONFIG_RADIO_ADAPTERS=y
+CONFIG_RADIO_ADAPTERS=m
 CONFIG_RADIO_MAXIRADIO=m
 CONFIG_RADIO_SAA7706H=m
 CONFIG_RADIO_SHARK2=m
@@ -5212,13 +5219,13 @@ CONFIG_REMOTEPROC=y
 # CONFIG_RESET_INTEL_GW is not set
 # CONFIG_RESET_TI_SYSCON is not set
 # CONFIG_RESOURCE_KUNIT_TEST is not set
+CONFIG_RETHUNK=y
 CONFIG_RETPOLINE=y
 # CONFIG_RFD77402 is not set
 # CONFIG_RFD_FTL is not set
 CONFIG_RFKILL_GPIO=m
 CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL=m
-# CONFIG_RHEL_DIFFERENCES is not set
 CONFIG_RING_BUFFER_BENCHMARK=m
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_VALIDATE_TIME_DELTAS is not set
@@ -6589,6 +6596,7 @@ CONFIG_SPEAKUP_SYNTH_LTLK=m
 CONFIG_SPEAKUP_SYNTH_SOFT=m
 CONFIG_SPEAKUP_SYNTH_SPKOUT=m
 CONFIG_SPEAKUP_SYNTH_TXPRT=m
+CONFIG_SPECULATION_MITIGATIONS=y
 CONFIG_SPI_ALTERA_CORE=m
 CONFIG_SPI_ALTERA_DFL=m
 # CONFIG_SPI_ALTERA is not set
@@ -7569,7 +7577,7 @@ CONFIG_VIDEO_IMX335=m
 CONFIG_VIDEO_IMX355=m
 CONFIG_VIDEO_IMX412=m
 CONFIG_VIDEO_IPU3_CIO2=m
-# CONFIG_VIDEO_IPU3_IMGU is not set
+CONFIG_VIDEO_IPU3_IMGU=m
 # CONFIG_VIDEO_IVTV_ALSA is not set
 CONFIG_VIDEO_IVTV=m
 CONFIG_VIDEO_LM3560=m
@@ -7827,7 +7835,7 @@ CONFIG_X86_ACPI_CPUFREQ=m
 CONFIG_X86_AMD_FREQ_SENSITIVITY=m
 CONFIG_X86_AMD_PLATFORM_DEVICE=y
 CONFIG_X86_AMD_PSTATE=y
-# CONFIG_X86_ANDROID_TABLETS is not set
+CONFIG_X86_ANDROID_TABLETS=m
 # CONFIG_X86_BOOTPARAM_MEMORY_CORRUPTION_CHECK is not set
 CONFIG_X86_CHECK_BIOS_CORRUPTION=y
 CONFIG_X86_CPA_STATISTICS=y
